Add projections of purchase orders to avoid having to replay all events in the event store when performing read queries